  (Dale Anson)

- Fix Bug #4011, The Cut Lines macro gives exception if the cursor is beyond
  text area (Patch #600, Roman Tsourick)

- Fix for bug #541, let ESC key close the print dialog. (Dale Anson)

}}}
{{{ UI Improvements

- Allow specification of fallback font sizes (Patch #569, Rafal Kolanski)

- Show tooltips in ShortcutOptionPane table (FR# 538, Roman Tsourick)

- FSB: Disable first column dragging (Patch# 603, Roman Tsourick)

- FSB: Sorting icon not following header when moving
  (Bug# 4049, Patch# 604, Roman Tsourick)

}}}
{{{ Miscellaneous

- FR #506, FR #536: Autosaves are now also saved to the Backup directory.
  (Alan Ezust, Hrotkó Gábor)

- FR #175: Saving and backup option, "Never Mark Untitled Buffers Dirty" changed
  name and behavior to "Close Dirty Untitled buffers without confirmation"
  (Alan Ezust)

- Patch #612, fr #518: buffer lock (Roman Tsourick)

- Enhancements of russian localization (Roman Tsourick)

}}}
{{{ Editing

- Patch #607: C and C++ mode updates (Roman Tsourick)

- Patch #613: javascript mode update (up to ES 2017) (Roman Tsourick)

- Patch #608, bug #2106: PHP mode "//" comment syntax highlighting is incorrect
  (Roman Tsourick)

- Patch #609, bug #2194: ASP Syntax highlight bug w/comment (Roman Tsourick)

- Patch #610, bug #4054: hash comment highlighting in mysql mode
  (Roman Tsourick)

- Patch #611, bug #3249: assembler-x86 comment directive (Roman Tsourick)

- nsis2 mode updates (Uwe Stöhr - Patch #606)

- Draw2d mode updates (A.Vontobel - Patch #605)

- Add Gherkin mode (english) to support Cucumber feature files
  (Matthieu Casanova)

- Patch #593 - Various small patches to modes (AdamS)

- Patch #592 - for groovy mode (Egor Abramovich)

- Patch #595 - New Assembly-arm32 edit mode (M. Cesar R. Lacruz)

- Updated java-module-info mode (Dale Anson)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: